# goodluke

./: .env.example  .gitignore  LICENSE  README.md  gerar_dados.py  keep_alive.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/: copilot-instructions.md
.github/workflows/: daily-run.yml  keep_alive.yml
.streamlit/: config.toml  pages.toml  secrets.toml.example
analise-sentimentos/: README.md  requirements.txt  setup_nltk.py
analise-sentimentos/app/: dashboard.py
analise-sentimentos/data/: comentarios_classificados.csv  comentarios_social.csv
analise-sentimentos/src/: analise_motor.py  gerador_dados.py
assistente-rag/: requirements.txt
assistente-rag/app/: chatbot_rag.py
assistente-rag/db_store/: .gitkeep  chroma.sqlite3
assistente-rag/documentos/: .gitkeep
assistente-rag/src/: indexador.py  processador_pdf.py
config/: .gitkeep
data/: .gitkeep
data/raw/: sensor_data.csv
models/: modelo_preditivo.pkl
oraculo-vendas/: init_env.py  requirements.txt
oraculo-vendas/app/: dashboard_vendas.py
oraculo-vendas/data/: vendas_historico.csv
oraculo-vendas/models/: prophet_model.pkl
oraculo-vendas/src/: gerar_vendas.py  treinar_oraculo.py
output/: .gitkeep
pages/: 1_Previsao_Falhas.py  1_Sistema_de_Precaucao_Mecanica.py  2_Analise_Sentimentos.py  2_Gestor_de_Reputacao_de_Marca.py  3_Que_tal_esse.py  3_Sugestao_de_compra.py  4_O_Oraculo_de_Vendas.py  5_O_Assistente_Corporativo.py  6_GIG_Master_AI.py  7_Burger_Flow_Intelligence.py  8_PoA_Insight_Explorer.py  9_Visual_On_Demand.py
projeto-burger-flow/: README.md  requirements.txt
projeto-burger-flow/app/: __init__.py  burger_dashboard.py
projeto-burger-flow/data/: menu_performance.csv  necessidade_insumos.csv  previsao_estoque.csv  vendas_burger.csv
projeto-burger-flow/models/: prophet_batata_frita.pkl  prophet_burger_clássico.pkl  prophet_burger_gourmet.pkl
projeto-burger-flow/src/: __init__.py  (+2 more)
projeto-gig-master/: README.md  requirements.txt
projeto-poa-explorer/: README.md  requirements.txt
projeto-visual-demand/: README.md  requirements.txt
shared/: components.py
sistema-recomendacao/: requirements.txt  setup.py
src/: __init__.py  config.py  downloader.py  llm_client.py  main.py  notifications.py  processor.py  train_model.py  whatsapp_client.py
tests/: __init__.py  test_downloader.py
(+34 files in other folders)
